--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="?android:attr/selectableItemBackground"
 
-    android:layout_height="60dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txtName"
@@ -24,8 +24,8 @@
 
     <ImageView
         android:id="@+id/imgAvatar"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
